# proof-stell-contract

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci-cargo-build.yml
docs/: UPGRADE_GOVERNANCE.md
docs/superpowers/specs/: 2026-06-21-batch-operations-design.md  2026-06-21-upgrade-governance-design.md
src/: cache.rs  config.rs  error.rs  event.rs  hash_validator.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  stellar.rs
