[package]
name = "proofstell_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.4.1"
stellar-strkey = "0.0.9"

[dev-dependencies]
soroban-sdk = { version = "23.4.1", features = ["testutils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
axum = "0.7"
governor = "0.6"
prometheus = "0.13"
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
